--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.application.name=bb-pets-adoption
+## endpoint provided by your identity provider (IDP) or the service that issues JWT tokens
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-x8jau2ioykz07t1t.us.auth0.com
 
+## Logging congiguration
+logging.level.root=INFO
+logging.level.com.example.bb_pets_adoption=DEBUG
 
+## database configuration
 spring.data.mongodb.database=${MONGO_DB}
 spring.data.mongodb.uri=${MONGODB_URI}
