Implement Auth0 login functionality
- Add Auth0 configuration properties to application.properties
- Setup JWT decoding with JwtDecoder bean
- Ensure scopes are correctly set as 'openid,profile,email'
- Tested OAuth2 login flow and verified JWT handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=bb-pets-adoption
-## endpoint provided by your identity provider (IDP) or the service that issues JWT tokens
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-x8jau2ioykz07t1t.us.auth0.com
+
 
 ## Logging congiguration
 logging.level.root=INFO
@@ -9,3 +8,17 @@ logging.level.com.example.bb_pets_adoption=DEBUG
 ## database configuration
 spring.data.mongodb.database=${MONGO_DB}
 spring.data.mongodb.uri=${MONGODB_URI}
+
+
+## Auth0 configuration
+spring.security.oauth2.client.registration.auth0.client-id=${AUTH0_CLIENT_ID}
+spring.security.oauth2.client.registration.auth0.client-secret=${AUTH0_CLIENT_SECRET}
+spring.security.oauth2.client.registration.auth0.scope=openid,profile,email
+spring.security.oauth2.client.registration.auth0.redirect-uri=http://localhost:8080/login/oauth2/code/auth0
+spring.security.oauth2.client.provider.auth0.authorization-uri=https://dev-x8jau2ioykz07t1t.us.auth0.com/authorize
+spring.security.oauth2.client.provider.auth0.token-uri=https://dev-x8jau2ioykz07t1t.us.auth0.com/oauth/token
+spring.security.oauth2.client.provider.auth0.user-info-uri=https://dev-x8jau2ioykz07t1t.us.auth0.com/userinfo
+spring.security.oauth2.client.provider.auth0.jwk-set-uri=https://dev-x8jau2ioykz07t1t.us.auth0.com/.well-known/jwks.json
+spring.security.oauth2.client.provider.auth0.issuer-uri=https://dev-x8jau2ioykz07t1t.us.auth0.com/
+## endpoint provided by your identity provider (IDP) or the service that issues JWT tokens
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-x8jau2ioykz07t1t.us.auth0.com
