Implement Google OAuth2 login functionality
- Add Google OAuth2 configuration properties to application.properties
- Configure OAuth2 login with Google in SecurityConfiguration
- Setup JWT decoding for Google OAuth2 tokens with a JwtDecoder bean

--- a/src/main/resources/application-secret.properties
+++ b/src/main/resources/application-secret.properties
@@ -3,3 +3,6 @@ MONGODB_URI=mongodb+srv://javier:Bastande11@cluster0.cadha7c.mongodb.net/?retryW
 
 AUTH0_CLIENT_ID=SwTxL0MCGZ8HYWhUJT3HeCTV0h7FwCtV
 AUTH0_CLIENT_SECRET=KiQIDkwoNXlgkKIy_5V3BKTxKiEabytAnmYwhzz2DEEbNt6TF0_xZkS6t1OSZyGu
+
+GOOGLE_CLIENT_ID=638262210806-imkkam6fgejatu4qd1n4t4ebqtfo69i1.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
