--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,15 @@ spring.security.oauth2.client.provider.auth0.jwk-set-uri=https://dev-x8jau2ioykz
 spring.security.oauth2.client.provider.auth0.issuer-uri=https://dev-x8jau2ioykz07t1t.us.auth0.com/
 ## endpoint provided by your identity provider (IDP) or the service that issues JWT tokens
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-x8jau2ioykz07t1t.us.auth0.com
+
+
+## Google OAuth2 Configuration
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://openidconnect.googleapis.com/v1/userinfo
+spring.security.oauth2.client.provider.google.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
+spring.security.oauth2.client.provider.google.issuer-uri=https://accounts.google.com
