Implement simplified OAuth2 login and registration
- Registered the application with Facebook to obtain client-id and client-secret
- Added configuration properties for Facebook
- Created CustomOAuth2UserService class to handle user registration for multiple providers

--- a/src/main/resources/application-secret.properties
+++ b/src/main/resources/application-secret.properties
@@ -6,3 +6,6 @@ AUTH0_CLIENT_SECRET=KiQIDkwoNXlgkKIy_5V3BKTxKiEabytAnmYwhzz2DEEbNt6TF0_xZkS6t1OS
 
 GOOGLE_CLIENT_ID=638262210806-imkkam6fgejatu4qd1n4t4ebqtfo69i1.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+FACEBOOK_APP_ID=987238982979042
+FACEBOOK_APP_SECRET=deabc396522812495d0e8d46ea579ea2
