--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,14 @@ spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapi
 spring.security.oauth2.client.provider.google.user-info-uri=https://openidconnect.googleapis.com/v1/userinfo
 spring.security.oauth2.client.provider.google.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
 spring.security.oauth2.client.provider.google.issuer-uri=https://accounts.google.com
+
+
+## Facebook OAuth2 Configuration
+spring.security.oauth2.client.registration.facebook.client-id=${FACEBOOK_APP_ID}
+spring.security.oauth2.client.registration.facebook.client-secret=${FACEBOOK_APP_SECRET}
+spring.security.oauth2.client.registration.facebook.scope=email,public_profile
+spring.security.oauth2.client.registration.facebook.redirect-uri=http://localhost:8080/login/oauth2/code/facebook
+spring.security.oauth2.client.provider.facebook.authorization-uri=https://www.facebook.com/v8.0/dialog/oauth
+spring.security.oauth2.client.provider.facebook.token-uri=https://graph.facebook.com/v8.0/oauth/access_token
+spring.security.oauth2.client.provider.facebook.user-info-uri=https://graph.facebook.com/me?fields=id,name,email
+spring.security.oauth2.client.provider.facebook.issuer-uri=https://www.facebook.com
