--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,4 +44,5 @@ spring.security.oauth2.client.registration.facebook.redirect-uri=http://localhos
 spring.security.oauth2.client.provider.facebook.authorization-uri=https://www.facebook.com/v8.0/dialog/oauth
 spring.security.oauth2.client.provider.facebook.token-uri=https://graph.facebook.com/v8.0/oauth/access_token
 spring.security.oauth2.client.provider.facebook.user-info-uri=https://graph.facebook.com/me?fields=id,name,email
-spring.security.oauth2.client.provider.facebook.issuer-uri=https://www.facebook.com
+spring.security.oauth2.client.provider.facebook.user-name-attribute=id
+spring.security.oauth2.client.provider.facebook.jwk-set-uri=https://www.facebook.com/.well-known/jwks.json
