--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,10 @@
         <artifactId>mongodb-driver-sync</artifactId>
         <version>5.1.0</version>
     </dependency>
+    <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-mail</artifactId>
+</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
