--- a/src/main/resources/application-secret.properties
+++ b/src/main/resources/application-secret.properties
@@ -9,3 +9,6 @@ GOOGLE_CLIENT_SECRET=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
 
 FACEBOOK_APP_ID=987238982979042
 FACEBOOK_APP_SECRET=deabc396522812495d0e8d46ea579ea2
+
+MY_EMAIL=jb89.developer@gmail.com
+MY_EMAIL_PASSWORD=detmyznqzxpltiaf
