--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,3 +46,13 @@ spring.security.oauth2.client.provider.facebook.token-uri=https://graph.facebook
 spring.security.oauth2.client.provider.facebook.user-info-uri=https://graph.facebook.com/me?fields=id,name,email
 spring.security.oauth2.client.provider.facebook.user-name-attribute=id
 spring.security.oauth2.client.provider.facebook.jwk-set-uri=https://www.facebook.com/.well-known/jwks.json
+
+## Spring Mail
+spring.mail.host=smtp.gmail.com
+spring.mail.username=${MY_EMAIL}
+spring.mail.password=${MY_EMAIL_PASSWORD}
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.debug=true
