Implement New Pet List feature:
- Create React component 'ListNewPet' as core of aplication page for posting a new pet
- Create React component 'NewPetForm' which is a react form that allows user to enter new pet data
- Create POST request to send form data along with authentication token to API endpoint
- Create API endpoint within 'PetListing' controller class to receive and handle POST requet with pet data and token
- Create method 'savePet()' in 'PetServiceImpl' class to handle repository routing operation for the pet category passed
- Create 'PetList' model for keeping track of each pet posted, associateing the pet, the user, and setting a timestap
- Ensure new Pet is linked to the user on each pet list.
- Ensure 'PetList' instance is added into user's petListings list to keep track of thier pet listings
- Create 'PetListRepository' for managing database operations for 'PetList' objects

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=bb-pets-adoption
 
 
-
 ## Logging congiguration
 logging.level.root=INFO
 logging.level.com.example.bb_pets_adoption=DEBUG
@@ -11,6 +10,10 @@ logging.level.org.springframework.security=DEBUG
 spring.data.mongodb.database=${MONGO_DB}
 spring.data.mongodb.uri=${MONGODB_URI}
 
+## Configuration to handle Multipart Requests
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 ## Auth0 configuration
 spring.security.oauth2.client.registration.auth0.client-id=${AUTH0_CLIENT_ID}
