--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
       <artifactId>jjwt</artifactId>
       <version>0.9.1</version>
   </dependency>
+  <dependency>
+    <groupId>com.fasterxml.jackson.datatype</groupId>
+    <artifactId>jackson-datatype-jdk8</artifactId>
+    <version>2.17.1</version>
+</dependency>
         <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-logging</artifactId>
