Refactor Login & Register pages layout:
- Login page has been moved to a dropdown container on the navbar links
- Register page has been styled with React Bootstrap components

Create My Listings page for users to view and manage their pet listings:

- Create MyListings React component as page core
- Create CardList react component to display pet listings as cards
- Add cliente side implentation for managing API GET requests
- Add /pets/my_listings API enpoint into PetController to receive and handle requests
- Add client-side functionality for deleting pet listings
- Add /pets/delete_pet API endpoint to handle DELETE requests
- Add deletePetList() into PetServiceImpl class to manage item deletion and cascade deletion with associated objects( User, Pet)
- Create Amazon S3 bucket to store uploaded pet images, and implement classes and configurations into Spring API
- Ensure propeer item deletion fucntionality

--- a/src/main/resources/application-secret.properties
+++ b/src/main/resources/application-secret.properties
@@ -12,3 +12,7 @@ FACEBOOK_APP_SECRET=deabc396522812495d0e8d46ea579ea2
 
 MY_EMAIL=jb89.developer@gmail.com
 MY_EMAIL_PASSWORD=detmyznqzxpltiaf
+
+MY_AWS_ACCESS_KEY=AKIAWQIOZWCV3XFGQKYW
+MY_AWS_SECRET_KEY=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
+
