--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.data.mongodb.uri=${MONGODB_URI}
 
 ## Configuration to handle Multipart Requests
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
 
 ## Auth0 configuration
 spring.security.oauth2.client.registration.auth0.client-id=${AUTH0_CLIENT_ID}
@@ -62,3 +62,11 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.debug=true
+
+
+## Amazon S3 Clous Services configurations
+aws.access.key=${MY_AWS_ACCESS_KEY}
+aws.secret.key=${MY_AWS_SECRET_KEY}
+aws.region=eu-west-1
+aws.s3.bucket=baby-pets-adoption
+aws.s3.folderName=uploads
