--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,7 +55,7 @@ spring.security.oauth2.client.provider.facebook.jwk-set-uri=https://www.facebook
 
 ## Spring Mail
 spring.mail.host=smtp.gmail.com
-spring.mail.username=${MY_EMAIL}
+spring.mail.username=Baby Pets Adoption
 spring.mail.password=${MY_EMAIL_PASSWORD}
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
