--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Upcoming Baby Pets Adoption Application</description>
 	<properties>
 		<java.version>19</java.version>
+		  <maven.compiler.source>19</maven.compiler.source>
+          <maven.compiler.target>19</maven.compiler.target>
 	</properties>
 	
 	<dependencies>
