Update baseUrl path for deployed application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=bb-pets-adoption
 
+app.frontend.base-url=https://baby-pets-adoption.onrender.com
 
 ## Logging congiguration
 logging.level.root=INFO
